Prevent the video from overlapping on weird screen aspect ratios

--- a/src/_styles/modules/video-section.scss
+++ b/src/_styles/modules/video-section.scss
@@ -116,7 +116,8 @@
   }
 
   .modal-dialog {
-    max-width: 65%;
+    width: 75%;
+    max-width: 109vh;
     
     @include media-breakpoint-down('md') {
       max-width: 100%;
